cluster-cd/apps/base/home/node-red/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: &name node-red
  labels:
    app.kubernetes.io/name: *name
    app.kubernetes.io/instance: *name
spec:
  type: ClusterIP
  ports:
    - name: api
      port: 1880
      protocol: TCP
  selector:
    app.kubernetes.io/name: *name
    app.kubernetes.io/instance: *name
